# VulkanRenderEngine

./: .gitignore  CMakeLists.txt  Readme.md  ToDoList.md  main.cpp
assets/: credits.txt
modules/: glm.cppm  tinyobjloader.cppm
shaders/: compute_push_constants.hlsl  main_shader.hlsl  particle_compute_shader.hlsl  particle_graphics_shader.hlsl  shader.hlsl  shader.slang  vertex_push_constants.hlsl
src/: ecs.cppm  main.cpp  platform.cppm  render.cppm
src/core/: hlsl_compiler.cppm  input.cppm  platform.cppm
src/misc/: vulkan_loader.cpp
src/render/: camera.cppm  culling_system.cppm  render_engine.cppm  render_locator.cppm  render_types.cppm  rendergraph.cppm  vulkan_resource_service.cppm
src/resource/: resource.cppm
temp/: FindVulkan.cmake
